<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="aboutViewModel"
            type="com.weeprogram.abat.screens.about.AboutViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FEFFCB"
        android:orientation="vertical"
        tools:context=".MainActivity"
        android:layoutAnimation="@anim/layout_animation"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ScrollView
            android:id="@+id/about_scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/heading_about"
                    style="@style/heading_style"
                    android:text="@string/heading_about"
                    android:textColor="#d9346d"
                    android:textSize="30sp" />


                <TextView
                    android:id="@+id/text_purpose"
                    style="@style/style1"
                    android:layout_marginTop="15dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/text_purpose_of_app" />

                <TextView
                    android:id="@+id/text_game"
                    style="@style/style2"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/text_in_form_of_game" />

                <TextView
                    android:id="@+id/text_rule"
                    style="@style/style1"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/text_rules_of_game" />

                <TextView
                    android:id="@+id/text_journey"
                    style="@style/style2"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/have_a_nice_journey" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/buuton_apps_margin"
                    android:text="@string/text_more_apps"
                    android:textAppearance="@style/style1" />

                <Button
                    android:id="@+id/btnApps"
                    style="@android:style/Widget.Material.Light.Button.Toggle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/vertical_margin"
                    android:backgroundTint="#d9346d"
                    android:fontFamily="@font/baloo"
                    android:onClick="@{() -> aboutViewModel.btnNavigateToMoreAboutLanguageClicked()}"
                    android:text="@string/more_info"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="#61a3dd"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:typeface="normal"
                    tools:text="@string/more_info" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>