<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_to_webservice"
    app:startDestination="@id/aboutFragment">

    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.weeprogram.abat.screens.about.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about">
        <action
            android:id="@+id/action_aboutFragment_to_moreAboutLanguageFragment"
            app:destination="@id/moreAboutLanguageFragment" />
    </fragment>
    <fragment
        android:id="@+id/moreAboutLanguageFragment"
        android:name="com.weeprogram.abat.screens.webservice.MoreAboutLanguageFragment"
        android:label="@string/more_apps"
        tools:layout="@layout/fragment_more_about_language" />
    <activity
        android:id="@+id/mainActivity"
        android:name="com.weeprogram.abat.MainActivity"
        android:label="MainActivity"
        tools:layout="@layout/fragment_main"/>
    <activity
        android:id="@+id/aboutAppActivity"
        android:name="com.weeprogram.abat.AboutAppActivity"
        android:label="AboutAppActivity"
        tools:layout="@layout/fragment_about"/>
    <fragment
        android:id="@+id/wordFragment"
        android:name="com.weeprogram.abat.screens.words.WordFragment"
        android:label="@string/words"
        tools:layout="@layout/fragment_word" />
    <fragment
        android:id="@+id/alphabetFragment"
        android:name="com.weeprogram.abat.screens.alphabet.AlphabetFragment"
        android:label="AlphabetFragment"
        tools:layout="@layout/fragment_alphabet"/>
</navigation>